Added first paragraph

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
  PIZZAPATZ IS LAME
  </h1>
  <br>
+ <p>
+ Hi, I am David Lo. I play Summoners War all day. I have no life desu.
+ </p>
  
  
 </body>
