Made it more professional comment in case someone reads it

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <header>
 <body>
  <h1>
- PIZZAPATZ IS LAME
+GETLO
  </h1>
  <br>
  <p>
- Hi, I am David Lo. I play Summoners War all day. I have no life desu.
+	Hi, I am David Lo. I just started making this website after my first exam 
+<br>
+in Comp282 Advanced Data Structures. - June 20, 2017
  </p>
  
  
