Beginner CSS file test

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 
 <header>
@@ -6,6 +8,8 @@
 GETLO
  </h1>
  <br>
+<!--CSS files-->
+<link rel="stylesheet" href="css/CssStyle.css">
  <p>
 	Hi, I am David Lo. I just started making this website after my first exam 
 <br>
