--- a/index.html
+++ b/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
-
 <html>
 
 <header>
 <body>
- <h1>
+<h1>
 GETLO
- </h1>
- <br>
+</h1>
+<br>
 <!--CSS files-->
 <link rel="stylesheet" href="css/CssStyle.css">
- <p>
-	Hi, I am David Lo. I just started making this website after my first exam 
+<p>
+  Hi, I am David Lo, recent graduate of California State University
+  - Northridge with a bachelor degree in Computer Engineering. 
 <br>
-in Comp282 Advanced Data Structures. - June 20, 2017
- </p>
- 
+  I just started making this website for fun after my first midterm 
+  in Comp282 Advanced Data Structures. - June 20, 2017
+
+<br>
+Favorite Quotes:
+<br> <br>
+Albert Einsten <br>
+"Everybody is a genius. But if you judge a fish by its ability <br>
+to climb a tree, it will live its whole life believing that it is <br>
+stupid." 
+<br> <br>
+Elon Musk <br>
+"I'm not trying to be anyone's savior. I'm just trying to think <br>
+about the future and not be sad."
+<br><br>
+Jack Ma<br>
+"I applied for Harvard, for 10 times rejected. <br>
+When KFC come to China, come to my city, <br>
+24 people went for the job, 23 accepted."
+
+  
+</p>
  
 </body>
 </header>
