--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@ GETLO
 <br>
 <!--CSS files-->
 <link rel="stylesheet" href="css/CssStyle.css">
+<!-- Start of Navigational Bar Test -->
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+<!-- End of Navigational Bar Test -->
 <p>
   Hi, I am David Lo, recent graduate of California State University
   - Northridge with a bachelor degree in Computer Engineering. 
