--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <header>
 <body>
-<h1>
-GETLO
-</h1>
-<br>
+
 <!--CSS files-->
 <link rel="stylesheet" href="css/CssStyle.css">
 <!-- Start of Navigational Bar Test -->
@@ -17,6 +13,18 @@ GETLO
   <li><a href="#about">About</a></li>
 </ul>
 <!-- End of Navigational Bar Test -->
+
+<h1>
+GETLO
+</h1>
+<br>
+
+<div>
+    background-color: #000010;
+	background-image: url("../FbP.jpg");
+    background-repeat: no-repeat;
+</div>
+
 <p>
   Hi, I am David Lo, recent graduate of California State University
   - Northridge with a bachelor degree in Computer Engineering. 
