--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ GETLO
 </h1>
 <br>
 
-
+<div>
+<p>See the background image?</p>
+</div>
 
 <p>
   Hi, I am David Lo, recent graduate of California State University
