Made NavigationBar Prettier-ish

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
 <!-- Start of Navigational Bar Test -->
 <ul>
   <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#projects">Projects</a></li>
+  <li><a href="#pogo">Pokemon Go</a></li>
+  <li><a href="#sw">SummonersWar</a></li>
 </ul>
 <!-- End of Navigational Bar Test -->
-
+<br>
 <h1>
 GETLO
 </h1>
 <br>
 
 <div>
-<p>See the background image?</p>
+<img src="FbP.jpg" class="center"> 
+<br><br><br>
 </div>
 
 <p>
