Added Active Color to Navigation Bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#projects">Projects</a></li>
-  <li><a href="#pogo">Pokemon Go</a></li>
+  <li><a href="#pogo">Resume</a></li>
   <li><a href="#sw">SummonersWar</a></li>
 </ul>
 <!-- End of Navigational Bar Test -->
