--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <link rel="stylesheet" href="css/CssStyle.css">
 <!-- Start of Navigational Bar Test -->
 <ul>
-  <li><a href="#home">Home</a></li>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#quote">Quotes</a></li>
   <li><a href="#projects">Projects</a></li>
-  <li><a href="#pogo">Resume</a></li>
+  <li><a href="#resume">Resume</a></li>
   <li><a href="#sw">SummonersWar</a></li>
 </ul>
 <!-- End of Navigational Bar Test -->
-<br>
+<br><br><br>
 <h1>
 GETLO
 </h1>
@@ -31,8 +32,8 @@ GETLO
   I just started making this website for fun after my first midterm 
   in Comp282 Advanced Data Structures. - June 20, 2017
 
-<br>
-Favorite Quotes:
+<br><br><br><br>
+<a name="quote"></a>Favorite Quotes:
 <br> <br>
 Albert Einsten <br>
 "Everybody is a genius. But if you judge a fish by its ability <br>
@@ -48,9 +49,23 @@ Jack Ma<br>
 When KFC come to China, come to my city, <br>
 24 people went for the job, 23 accepted."
 
-  
+
+<br><br><br><br>
+<a name="projects"></a>
+Projects:
+<br><br>
+
+<br><br><br><br>
+<a name="resume"></a>
+Resume:
+<br><br>
+
+<br><br><br><br>
+<a name="sw"></a>
+Summoners War:
+<br><br>
 </p>
- 
+
 </body>
 </header>
 
