--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ When KFC come to China, come to my city, <br>
 
 <br><br><br><br>
 <a name="projects"></a>
-Projects:
+<u>Projects:</u>
 <br><br>
 
 <br><br><br><br>
