Added Resume, CrazyPoker Project Specs Underlines etc

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <li><a class="active" href="#home">Home</a></li>
   <li><a href="#quote">Quotes</a></li>
   <li><a href="#projects">Projects</a></li>
+  <li><a href="#misc">Miscellaneous</a></li>
   <li><a href="#resume">Resume</a></li>
   <li><a href="#sw">SummonersWar</a></li>
 </ul>
@@ -34,7 +35,7 @@ GETLO
 
 <br><br><br><br>
 <a name="quote"></a>Favorite Quotes:
-<br> <br>
+<br><br><br>
 Albert Einsten <br>
 "Everybody is a genius. But if you judge a fish by its ability <br>
 to climb a tree, it will live its whole life believing that it is <br>
@@ -47,7 +48,8 @@ about the future and not be sad."
 Jack Ma<br>
 "I applied for Harvard, for 10 times rejected. <br>
 When KFC come to China, come to my city, <br>
-24 people went for the job, 23 accepted."
+24 people went for the job, 23 accepted."<br>
+I was the only one rejected.
 
 
 <br><br><br><br>
@@ -55,17 +57,51 @@ When KFC come to China, come to my city, <br>
 <u>Projects:</u>
 <br><br>
 
+<b>CRAZY POKER PROJECT</b>
+<br>
+<object width="800" height="400" data="project1.pdf">
+</object>
+<br>
+<b>SOURCE CODE</b>
+<br>
+<object width="800" height="400" data ="CrazyPoker.java">
+
 <br><br><br><br>
 <a name="resume"></a>
-Resume:
+<u>Resume:</u>
+<br><br>
+
+<object width="800" height="600" data="Resume-June30th.pdf">
+</object>
+ 
+
+<br><br>
+<a name="misc"></a>
+<u>Miscellaneous:</u>
+
+<br><br><br><br>
+<a name="dance"></a>
+<u>Dance:</u>
 <br><br>
 
 <br><br><br><br>
 <a name="sw"></a>
-Summoners War:
+<u>Summoners War:</u>
 <br><br>
-</p>
+SPEED 
+<br>
+Giants B10
+<br>
+Dragons B10
+<br>
+2:09
+<br>
+Necropolis B10
+<br>
 
+
+
+</p>
 </body>
 </header>
 
