--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@ I was the only one rejected.
 
 <b>CRAZY POKER PROJECT</b>
 <br>
+Specifications
+<br>
 <object width="800" height="400" data="project1.pdf">
 </object>
 <br>
 <b>SOURCE CODE</b>
 <br>
 <object width="800" height="400" data ="CrazyPoker.java">
-
+</object>
 <br><br><br><br>
 <a name="resume"></a>
 <u>Resume:</u>
