Added PWM Project Specification. Made div2 centered

--- a/index.html
+++ b/index.html
@@ -75,7 +75,26 @@ Specifications
 <br>
 <object width="800" height="400" data ="CrazyPoker.java">
 </object>
-
+<br><br>
+<b>PULSE WIDTH MODULATOR</b>
+<br>
+Specifications
+<br>
+</p>
+<div id="div2">
+You are to design the following:
+<br><br>
+The circuit will take an analog voltage and convert it to a pulse width. <br>
+1. The input will range from 1 to 10V <br>
+2. The output pulse will range from 10 microseconds corresponding to 1 V <br>
+&nbsp; &nbsp; to 1 microsecond corresponding to 10 V.<br>
+3. The circuit will be discrete and have two inputs.<br>
+&nbsp; &nbsp; A. The control input <br>
+&nbsp; &nbsp; B. The trigger input <br>
+4. The maximum speed of operation must be faster than the smallest output pulse.
+</div>
+<p>
+<br>
 
 <br><br>
 <a name="misc"></a>
@@ -94,7 +113,7 @@ SPEED
 <br>
 Giants B10
 <br>
-
+1:53
 <br>
 Dragons B10
 <br>
