Removed UnProfessional Gaming Content. 2nd Attempt at including .java source code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <li><a href="#resume">Resume</a></li>
   <li><a href="#projects">Projects</a></li>
   <li><a href="#misc">Miscellaneous</a></li>
-  <li><a href="#sw">SummonersWar</a></li>
 </ul>
 <!-- End of Navigational Bar Test -->
 <br><br><br>
@@ -73,7 +72,7 @@ Specifications
 <br>
 <b>SOURCE CODE</b>
 <br>
-<object width="800" height="400" data ="CrazyPoker.java">
+<object width="800" height="400" data ="CrazyPoker.doc">
 </object>
 <br><br>
 <b>PULSE WIDTH MODULATOR</b>
@@ -106,22 +105,6 @@ The circuit will take an analog voltage and convert it to a pulse width. <br>
 <br><br>
 
 <br><br><br><br>
-<a name="sw"></a>
-<u>Summoners War:</u>
-<br><br>
-SPEED 
-<br>
-Giants B10
-<br>
-1:53
-<br>
-Dragons B10
-<br>
-2:09
-<br>
-Necropolis B10
-<br>
-
 
 
 </p>
