--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ Specifications
 <br>
 <b>SOURCE CODE</b>
 <br>
-<object width="800" height="400" data ="CrazyPoker.doc">
-</object>
+
+<!-- &nbsp is a spacebar -->
 <br><br>
 <b>PULSE WIDTH MODULATOR</b>
 <br>
@@ -94,6 +94,10 @@ The circuit will take an analog voltage and convert it to a pulse width. <br>
 </div>
 <p>
 <br>
+
+GitHub: <p><a href="https://github.com/GGetLo/">https://github.com/GGetLo/</a></p><br>
+Linkedin: <p><a href="https://www.linkedin.com/in/david-lo-8b301a113">https://www.linkedin.com/in/david-lo-8b301a113</a></p><br>
+Email: david.lo.239@my.csun.edu <br>
 
 <br><br>
 <a name="misc"></a>
