--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@ GETLO
 
 <div>
 <img src="FbP.jpg" class="center"> 
-<br>
+<br> <!--
 <iframe width="100%" height="450" scrolling="no" frameborder="no" 
         src="https://w.soundcloud.com/player/?url=https%3A//api.
 		     soundcloud.com/tracks/163249578&amp;auto_play=false
 			 &amp;hide_related=false&amp;show_comments=true&amp;
 			 show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-<br><br><br>
+<br><br><br> -->
 </div>
 
 <p>
@@ -100,9 +100,9 @@ The circuit will take an analog voltage and convert it to a pulse width. <br>
 <p>
 <br>
 
-GitHub: <p><a href="https://github.com/GGetLo/">https://github.com/GGetLo/</a></p><br>
-Linkedin: <p><a href="https://www.linkedin.com/in/david-lo-8b301a113">https://www.linkedin.com/in/david-lo-8b301a113</a></p><br>
-Email: david.lo.239@my.csun.edu <br>
+GitHub: </p><p><a href="https://github.com/GGetLo/">https://github.com/GGetLo/</a></p><br>
+<p>Linkedin: <p><a href="https://www.linkedin.com/in/david-lo-8b301a113">https://www.linkedin.com/in/david-lo-8b301a113</a></p><br>
+<p>Email: <br><br> david.lo.239@my.csun.edu <br>
 
 <br><br>
 <a name="misc"></a>
