--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <li><a href="#quote">Quotes</a></li>
   <li><a href="#resume">Resume</a></li>
   <li><a href="#projects">Projects</a></li>
+  <li><a href="#timeline">Timeline</a></li>
+  <li><a href="#info">Information</a></li>
   <li><a href="#misc">Miscellaneous</a></li>
 </ul>
 <!-- End of Navigational Bar Test -->
@@ -61,7 +63,7 @@ I was the only one rejected.
 <u>Resume:</u>
 <br><br>
 
-<object width="800" height="600" data="Resume-June30th.pdf">
+<object width="800" height="600" data="Oct 2017.pdf">
 </object>
  
 <br><br><br><br>
@@ -69,11 +71,19 @@ I was the only one rejected.
 <u>Projects:</u>
 <br><br>
 
+<b>Matlab Project 1: Smiles and Leniency Engineering Experiment</b>
+<br><br>
+Report
+<br><br>
+<object width="888" height="400" data="309Project1.docx.pdf">
+</object>
+<br><br>
+
 <b>CRAZY POKER PROJECT</b>
 <br>
 Specifications
 <br>
-<object width="800" height="400" data="project1.pdf">
+<object width="888" height="400" data="project1.pdf">
 </object>
 
 <br>
@@ -97,14 +107,36 @@ The circuit will take an analog voltage and convert it to a pulse width. <br>
 &nbsp; &nbsp; B. The trigger input <br>
 4. The maximum speed of operation must be faster than the smallest output pulse.
 </div>
+
+
+<br><br>
+<a name="timeline"></a>
+
+<br>
 <p>
+Timeline
 <br>
 
+August 24-25, 2013: Volunteered at KCON
+<br>
+August 26, 2013 - August 30, 2015 : Attended Santa Monica College
+<br>
+July 3-6, 2014: Volunteer at Anime Expo
+<br>
+August 2015 - August 2017 : Attended California State University - Northridge
+</p>
+
+<a name="info"></a>
+<p>
+<br>
+Information:
+<br><br>
 GitHub: </p><p><a href="https://github.com/GGetLo/">https://github.com/GGetLo/</a></p><br>
 <p>Linkedin: <p><a href="https://www.linkedin.com/in/david-lo-8b301a113">https://www.linkedin.com/in/david-lo-8b301a113</a></p><br>
 <p>Email: <br><br> david.lo.239@my.csun.edu <br>
 
-<br><br>
+
+
 <a name="misc"></a>
 <u>Miscellaneous:</u>
 
