--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ Report
 
 <b>CRAZY POKER PROJECT</b>
 <br>
+(Comp282 - Summer 2017 - Project 1)
+<br>
 Specifications
 <br>
 <object width="888" height="400" data="project1.pdf">
