--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ GETLO
 <br>
 
 <div>
-<img src="FbP.jpg" class="center"> 
+<img src="FbP.jpg" width="50%" height="50%" class="center"> 
 <br> <!--
 <iframe width="100%" height="450" scrolling="no" frameborder="no" 
         src="https://w.soundcloud.com/player/?url=https%3A//api.
@@ -135,17 +135,12 @@ Information:
 <br><br>
 GitHub: </p><p><a href="https://github.com/GGetLo/">https://github.com/GGetLo/</a></p><br>
 <p>Linkedin: <p><a href="https://www.linkedin.com/in/david-lo-8b301a113">https://www.linkedin.com/in/david-lo-8b301a113</a></p><br>
-<p>Email: <br><br> david.lo.239@my.csun.edu <br>
+<p>Email: <br><br> david.lo.main@gmail.com <br>
 
 
 
 <a name="misc"></a>
 <u>Miscellaneous:</u>
-
-<br><br><br><br>
-<a name="dance"></a>
-<u>Dance:</u>
-<br><br>
 
 <br><br><br><br>
 
